5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1635_2447.log
== SUBMITION (2019-04-10 13:22:26) 
-- CODE:
preco = float(input("numero: "))
pagamento = float(input("numero: "))
x = preco - pagamento
y = x<0
if(x>0):
	mensagem = "falta" x
else:
	mensagem = "troco de " y
print(mensagem)
	
-- EXECUTION TIME:
0.153245
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 6
    mensagem = "falta" x
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:22:27) 
-- CODE:
preco = float(input("numero: "))
pagamento = float(input("numero: "))
x = preco - pagamento
y = x<0
if(x>0):
	mensagem = "falta" x
else:
	mensagem = "troco de " y
print(mensagem)
	
-- ERROR:
File "XXXX", line 6
    mensagem = "falta" x
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:22:44) 
-- CODE:
preco = float(input("numero: "))
pagamento = float(input("numero: "))
x = preco - pagamento
y = x<0
if(x>0):
	mensagem = "falta x"
else:
	mensagem = "troco de y"
print(mensagem)
	
-- OUTPUT:
falta x
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:22:59) 
-- CODE:
preco = float(input("numero: "))
pagamento = float(input("numero: "))
x = preco - pagamento
y = x<0
if(x>0):
	mensagem = "falta x"
else:
	mensagem = "troco de y"
print(mensagem)
	
-- EXECUTION TIME:
0.199007
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta x
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de y
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de y
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:24:55) 
-- CODE:
preco = float(input("numero: "))
pagamento = float(input("numero: "))
x = preco - pagamento
y = x<0
if(x>0):
	mensagem = "falta" (x)
else:
	mensagem = "troco de" (y)
print(mensagem)
	
-- EXECUTION TIME:
0.218354
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 6, in <module>
    mensagem = "falta" (x)
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:25:49) 
-- CODE:
preco = float(input("numero: "))
pagamento = float(input("numero: "))
x = preco - pagamento
y = x<0
if(x>0):
	mensagem = (Falta x)
else:
	mensagem = (Troco de y)
print(mensagem)
	
-- EXECUTION TIME:
0.18393
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 6
    mensagem = (Falta x)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:29:22) 
-- CODE:
preco = float(input("numero: "))
pagamento = float(input("numero: "))
x = preco - pagamento
y = x<0
if(x>0):
	mensagem = (Falta x)
else:
	mensagem = (Troco de y)
print(mensagem)
	
-- ERROR:
File "XXXX", line 6
    mensagem = (Falta x)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:32:00) 
-- CODE:
preco = float(input("numero: "))
pagamento = float(input("numero: "))
if(preco>pagamento):
	x = preco - pagamento
	mensagem = ("Falta x")
else:
	y = pagamento - preco
	mensagem = ("Troco de y")
print(round(mensagem, 2))
	
-- EXECUTION TIME:
0.120003
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 9, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:34:53) 
-- CODE:
preco = float(input("numero: "))
pagamento = float(input("numero: "))
if(preco>pagamento):
	x = round(preco - pagamento, 2)
	print("Falta", x)
else:
	y = round(pagamento - preco, 2)
	print("Troco de", 2)

	
-- EXECUTION TIME:
0.223316
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 2
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:34:56) 
-- CODE:
preco = float(input("numero: "))
pagamento = float(input("numero: "))
if(preco>pagamento):
	x = round(preco - pagamento, 2)
	print("Falta", x)
else:
	y = round(pagamento - preco, 2)
	print("Troco de", 2)

	
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:35:30) 
-- CODE:
preco = float(input("numero: "))
pagamento = float(input("numero: "))
if(preco>pagamento):
	x = round(preco - pagamento, 2)
	print("Falta", x)
else:
	y = round(pagamento - preco, 2)
	print("Troco de", y)

	
-- EXECUTION TIME:
0.120722
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
